force-app/main/default/objects/Tarif__c/Tarif__c.object-meta.xml
<CustomObject>
    <description>this is the tarif name</description>
    <label>Tariff</label>
    <nameField>
        <label>Tarif Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tariffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>