force-app/main/default/objects/Tarif__c/fields/Categories__c.field-meta.xml
<CustomField>
    <fullName>Categories__c</fullName>
    <label>Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test1</fullName>
            </value>
            <value>
                <fullName>Test2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>