force-app/main/default/objects/Tarif__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Company to which tariff is tied</description>
    <label>User Company</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Tariffs</relationshipLabel>
    <relationshipName>Tariffs</relationshipName>
    <type>Lookup</type>
</CustomField>