force-app/main/default/objects/Tarif__c/fields/Id_Country__c.field-meta.xml
<CustomField>
    <fullName>Id_Country__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>this holds the country</description>
    <label>User Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Tariffs</relationshipLabel>
    <relationshipName>Tarifs</relationshipName>
    <type>Lookup</type>
</CustomField>