force-app/main/default/objects/Tarif__c/fields/Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>