force-app/main/default/objects/Tarif__c/fields/Product_Only__c.field-meta.xml
<CustomField>
    <fullName>Product_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Only</label>
    <type>Checkbox</type>
</CustomField>