force-app/main/default/objects/Tarif__c/recordTypes/AT_Tarif.recordType-meta.xml
<RecordType>
    <fullName>AT_Tarif</fullName>
    <active>true</active>
    <label>AT Tarif</label>
</RecordType>