force-app/main/default/objects/Tarif__c/recordTypes/CD_Tarif.recordType-meta.xml
<RecordType>
    <fullName>CD_Tarif</fullName>
    <active>true</active>
    <label>CD Tarif</label>
</RecordType>