force-app/main/default/objects/Tarif__c/recordTypes/CZ_Tarif.recordType-meta.xml
<RecordType>
    <fullName>CZ_Tarif</fullName>
    <active>true</active>
    <label>CZ Tarif</label>
</RecordType>