force-app/main/default/objects/Tarif__c/recordTypes/DE_Tarif.recordType-meta.xml
<RecordType>
    <fullName>DE_Tarif</fullName>
    <active>true</active>
    <label>DE Tarif</label>
</RecordType>