force-app/main/default/objects/Tarif__c/recordTypes/DE_Tariff.recordType-meta.xml
<RecordType>
    <fullName>DE_Tariff</fullName>
    <active>true</active>
    <label>DE Tariff</label>
</RecordType>