force-app/main/default/objects/Tarif__c/recordTypes/DH_AU_Tarif.recordType-meta.xml
<RecordType>
    <fullName>DH_AU_Tarif</fullName>
    <active>true</active>
    <label>DH AU Tarif</label>
</RecordType>