force-app/main/default/objects/Tarif__c/recordTypes/FI_Tarif.recordType-meta.xml
<RecordType>
    <fullName>FI_Tarif</fullName>
    <active>true</active>
    <label>FI Tarif</label>
</RecordType>