force-app/main/default/objects/Tarif__c/recordTypes/FP_Tarif.recordType-meta.xml
<RecordType>
    <fullName>FP_Tarif</fullName>
    <active>true</active>
    <label>FP Tarif</label>
</RecordType>