force-app/main/default/objects/Tarif__c/recordTypes/HU_Tarif.recordType-meta.xml
<RecordType>
    <fullName>HU_Tarif</fullName>
    <active>true</active>
    <label>HU Tarif</label>
</RecordType>