force-app/main/default/objects/Tarif__c/recordTypes/PY_Tarif.recordType-meta.xml
<RecordType>
    <fullName>PY_Tarif</fullName>
    <active>true</active>
    <description>Record type for Pedidos Ya and in future to be global for all countries</description>
    <label>PY Tarif</label>
</RecordType>