force-app/main/default/objects/Tarif__c/recordTypes/SE_Tarif.recordType-meta.xml
<RecordType>
    <fullName>SE_Tarif</fullName>
    <active>true</active>
    <label>SE Tarif</label>
</RecordType>