force-app/main/default/objects/Tarif__c/recordTypes/Talabat_Tarif.recordType-meta.xml
<RecordType>
    <fullName>Talabat_Tarif</fullName>
    <active>true</active>
    <label>Talabat Tarif</label>
</RecordType>