force-app/main/default/objects/Tarif__c/recordTypes/UK_Tarif.recordType-meta.xml
<RecordType>
    <fullName>UK_Tarif</fullName>
    <active>true</active>
    <label>UK Tarif</label>
</RecordType>