force-app/main/default/objects/Tarif__c/recordTypes/Yogiyo_Tarif.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_Tarif</fullName>
    <active>true</active>
    <label>Yogiyo Tarif</label>
</RecordType>