force-app/main/default/objects/Tarif__c/validationRules/Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_Required</fullName>
    <active>true</active>
    <description>Name Required</description>
    <errorConditionFormula>OR( ISNULL( Name ) , ISBLANK( Name ) )</errorConditionFormula>
    <errorMessage>Tarif name required</errorMessage>
</ValidationRule>